Bug #2276 - Gradebook: Rows Intermittently Misaligned
Attempt number one at cleaning up Safari issue, see
http://redmine.citytech.cuny.edu/issues/2276#note-12

--- a/wp-content/plugins/openlab-gradebook/GradeBook.less
+++ b/wp-content/plugins/openlab-gradebook/GradeBook.less
@@ -526,6 +526,9 @@ span.twitter-typeahead {
                 padding: 15px 8px;
             }
         }
+        td.student{
+            height: 59px;
+        }
         .student-grades {
             display: none;
         }
@@ -599,6 +602,9 @@ span.twitter-typeahead {
                     }
                 }
             }
+        }
+        td.student-grades{
+            height: 59px;
         }
         .student-grades {
             min-width: 68px;
